# DiningPhilosophers

./: CMakeLists.txt  DiningPhilosophers.kdev4
source/: CMakeLists.txt  cout.cpp  fork.cpp  main.cpp  philosopher.cpp  table.cpp  waiter.cpp
source/h/: cout.h  fork.h  philosopher.h  table.h  waiter.h
